@@ -4,6 +4,9 @@ import com.ctrip.framework.apollo.spring.annotation.EnableApolloConfig;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 
+/*
+--add-opens=java.base/java.lang=ALL-UNNAMED
+ */
 @EnableApolloConfig
 @SpringBootApplication
 public class SpringCloudGatewayApplication {
